# Item-retrieving-bot

./: .gitignore  State_machine.vpd  control_demo.cpp  demo  demo.cpp  index.html  motor.cpp  motor.h  motor_control.cpp  robot_control.cpp  robot_control.h
Feature_Capture/: CMakeCache.txt  CMakeLists.txt  Makefile  Robot  Scanner  cmake_install.cmake  load  load.cpp  main.cpp  robot_main.cpp  tracker
Feature_Capture/include/: item.h  opencv.h  retriving.h  surf.h  timer.h
Feature_Capture/src/: Makefile  cmake_install.cmake  item.cpp  retriving.cpp  robot_control.cpp  surf.cpp
version2/: demo.cpp  motor.cpp  robot_control.cpp  robot_control.h
